Get the layout right

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>  
     <div class="container">
-        <header>CALCULATOR</header>
+        
         <main>
-            <div class="screen"></div>
+            <header>CALCULATOR</header>
+            <textarea name="text" id="screen" class="screen"></textarea>
             <div class="buttons">
 
             </div>
